Add serde and serde_json dependencies for serialization support; refactor imports and improve code organization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 
+# Serialization
+serde.workspace = true
+serde_json.workspace = true
+
 # Error handling
 thiserror.workspace = true
 log.workspace = true
