--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@ quote = "1.0"
 proc-macro2 = "1.0"
 
 # Serialization
-serde = { workspace = true }
-serde_json = { workspace = true }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 # Error handling
-thiserror = { workspace = true }
-log = { workspace = true }
+thiserror = "1.0"
+log = "0.4"
 
 # CLI support
 clap = { version = "4.4", features = ["derive"] }
