--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
 [patch."https://github.com/orbitrs/orbitrs.git"]
-orbitrs = { path = "/Volumes/EXT/repos/orbitrs/orbitrs" }
+orbitrs = { path = "../orbitrs" }
