--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
           repository: orbitrs/orbitrs
           path: orbitrs-workspace/orbitrs
           
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libfontconfig1-dev libfreetype6-dev
+          
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
