--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ proc-macro2 = "1.0"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
 
 # Error handling
 thiserror = "1.0"
@@ -27,6 +28,12 @@ log = "0.4"
 
 # CLI support
 clap = { version = "4.4", features = ["derive"] }
+
+# Regex support
+regex = "1.10"
+
+# Parallel processing
+rayon = "1.8"
 
 [lib]
 name = "orbit_analyzer"
