--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
     name: Test
     runs-on: ${{ matrix.os }}
     needs: check
+    timeout-minutes: 45
     strategy:
       matrix:
         include:
@@ -85,6 +86,7 @@ jobs:
             target: x86_64-pc-windows-msvc
           - os: macos-latest
             target: x86_64-apple-darwin
+      fail-fast: false
     steps:
       - name: Create workspace directory
         run: mkdir -p $GITHUB_WORKSPACE/orbitrs-workspace
